# c-cpp-tutorial

./: .gitignore  CMakeLists.txt  Jenkinsfile
000_练习题/: CMakeLists.txt
001-c-tutorial/: CMakeLists.txt
001-c-tutorial/01-基础入门/01_helloworld/src/: main.c
001-c-tutorial/01-基础入门/04_数据类型/src/: main.c
001-c-tutorial/01-基础入门/08_标准输入和标准输出/src/: main.c  main_01.c
001-c-tutorial/02-真假表示/01_非bool表示/src/: main.c
001-c-tutorial/02-真假表示/03_使用枚举和宏定义模拟bool/src/: main_02.c
001-c-tutorial/02-真假表示/04_特殊值与真假/src/: main.c
001-c-tutorial/025_关键字-extern-共享变量或函数声明/src/: main.c  mylib.c
001-c-tutorial/04_运算符/02_逻辑运算符和逗号表达式/src/: main.c
001-c-tutorial/05-数组入门/01_数组基础/src/: main_01.c
001-c-tutorial/05-数组入门/02_数组应用/src/: main_01.c
001-c-tutorial/059_学生管理系统多文件结构_固定数组版/inc/: student_manager.h
001-c-tutorial/05_数组入门/01_数组基础/src/: main_01.c
001-c-tutorial/060_动态内存管理/src/: main.c
001-c-tutorial/07-结构体入门/01_结构体入门/src/: main.c
001-c-tutorial/08-关键字/01_关键字-sizeof-获取数据类型或变量大小/src/: main.c
001-c-tutorial/08-关键字/03_extern_共享变量或函数声明/: CMakeLists.txt
001-c-tutorial/08-关键字/03_关键字-extern-共享变量或函数声明/inc/: mylib.h
001-c-tutorial/08_关键字/02_关键字-typedef-简化数据类型声明/src/: main.c
001-c-tutorial/08_关键字/05_关键字-static-生命周期和作用域/: CMakeLists.txt
001-c-tutorial/08_关键字/05_关键字-static-生命周期和作用域/src/: main_01.c
001-c-tutorial/09-指针中级/01_值传递和地址传递/src/: main.c
001-c-tutorial/09-指针中级/02_指针和数组/src/: main.c
001-c-tutorial/09-指针中级/03_高低字节和大小端/src/: main.c
001-c-tutorial/09-指针中级/05_指针进阶/src/: main_02.c
001-c-tutorial/09-指针中级/07_指针和函数/main.c/: main.c
001-c-tutorial/09-指针中级/08_指针和数据类型/src/: main.c
001-c-tutorial/09-指针中级/09_指针和字符串/src/: main.c
001-c-tutorial/10-多文件结构/02_c语言多文件结构-支持重复引用/inc/: mylib.h
001-c-tutorial/10-多文件结构/02_多文件结构-支持重复引用/src/: main.c  test_1.c  test_2.c
001-c-tutorial/10-多文件结构/06_c语言模块化设计/inc/: mylib_2.h
001-c-tutorial/10-多文件结构/06_c语言模块化设计/src/: main.c  main_01.c  main_02.c  mylib_1.c  mylib_2.c
001-c-tutorial/10-多文件结构/06_多文件结构之模块化设计/inc/: mylib_1.h
001-c-tutorial/10-多文件结构/06_多文件结构之模块化设计/src/: main.c  mylib_1.c  mylib_2.c
001-c-tutorial/11-指针高级/02_二级指针和二维数组/src/: main.c  main_01.c
001-c-tutorial/11-指针高级/03_函数指针/src/: main_01.c  main_02.c  main_03.c  main_06.c  main_07.c  main_08.c
001-c-tutorial/14-结构体中级/01_结构体嵌套/src/: main.c
001-c-tutorial/14-结构体中级/02_结构体实现静态链表/src/: main.c
001-c-tutorial/14-结构体中级/03_结构体对齐/src/: main.c
001-c-tutorial/14-结构体中级/05_结构体成员偏移量/src/: main.c
001-c-tutorial/16-动态内存管理/01_动态内存管理/src/: main.c
001-c-tutorial/16-动态内存管理/02_学生管理系统单文件结构/src/: main.c
001-c-tutorial/16-动态内存管理/03_学生管理系统多文件结构_固定数组版/inc/: student_manager.h
001-c-tutorial/16-动态内存管理/03_学生管理系统多文件结构_固定数组版/src/: student_manager.c
001-c-tutorial/16-动态内存管理/03_学生管理系统多文件结构_固定数组版_二进制读写版/inc/: stdaef.h  student_manager.h
001-c-tutorial/16-动态内存管理/03_学生管理系统多文件结构_固定数组版_二进制读写版/src/: student_manager.c
001-c-tutorial/16-动态内存管理/04_学生管理系统多文件结构_动态数组版/src/: student_manager.c
001-c-tutorial/16-动态内存管理/04_学生管理系统多文件结构_动态数组版_二进制读写版/src/: student_manager.c
001-c-tutorial/16-动态内存管理/05_结构体+动态内存管理实现链表/src/: main.c
001-c-tutorial/17-c语言常用文件操作/01_c语言常用文件操作/src/: main.c
001-c-tutorial/17-c语言常用文件操作/01_c语言常规读写文件/src/: file_double.txt  file_str.txt  main.c
001-c-tutorial/17-c语言常用文件操作/02_学生管理系统多文件结构_动态数组版_文本读写版/: CMakeLists.txt
001-c-tutorial/17-c语言常用文件操作/02_学生管理系统多文件结构_动态数组版_文本读写版/src/: student_manager.c
001-c-tutorial/17-c语言常用文件操作/03_c语言随机读写文件/src/: file_int.txt  main.c
001-c-tutorial/17-c语言常用文件操作/04_c语言从文件中读写字符串/src/: main.c
001-c-tutorial/17-c语言标准库/06_c语言标准库-string.h-字符串库函数/src/: main.c
001-c-tutorial/17-c语言标准库/07_c语言标准库-assert.h-断言库函数/src/: main.c
001-c-tutorial/17-文件操作/02_学生管理系统多文件结构_动态数组版_文本读写版/inc/: student_manager.h
001-c-tutorial/17-文件操作/03_随机读写文件/src/: main.c
001-c-tutorial/17-栈内存管理/01_在栈内存上申请空间/src/: main.c
001-c-tutorial/18-文件操作/02_学生管理系统多文件结构_动态数组版_文本读写版/inc/: stdaef.h
001-c-tutorial/18-文件操作/02_学生管理系统多文件结构_动态数组版_文本读写版/src/: main.c  student_manager.c
001-c-tutorial/19_c语言接收外部参数/01_c语言接收外部参数入门/src/: main.c
001-c-tutorial/19_c语言接收外部参数/03_c语言接收外部参数实现linux中cp命令/src/: main.c
001-c-tutorial/19_接收外部参数/02_接收外部参数入门和环境变量/src/: main.c
001-c-tutorial/20-项目练习/05_打字母游戏/src/: main_01.c
001-c-tutorial/20-项目练习/06_c语言经典算法/src/: main.c
001-c-tutorial/20_预编译指令/01_预编译指令之宏定义/src/: main.c
001-c-tutorial/20_预编译指令/07_预编译指令之预定义宏/src/: main_01.c
001-c-tutorial/20_预编译指令/08_预编译指令之条件编译指令/src/: main_01.c  main_02.c  main_03.c  main_04.c
001-c-tutorial/21_预编译指令/07_预编译指令之预定义宏/src/: main.c  main_01.c
001-c-tutorial/21_预编译指令/08_预编译指令之条件编译指令/src/: main.c  main_01.c  main_02.c
001-c-tutorial/30-项目练习/01_习题练习/src/: main.c
001-c-tutorial/32-c语言扩展库/: ucrt64+clion工具链配置.txt
001-c-tutorial/32-c语言扩展库/01_c语言扩展库-glib.h-gnome基础库/: CMakeLists.txt
001-c-tutorial/32-c语言扩展库/01_glib.h_gnome基础库/: CMakeLists.txt
001-c-tutorial/32-c语言扩展库/02_c语言扩展库-cJSON.h-json处理库/: CMakeLists.txt
001-c-tutorial/32-c语言扩展库/02_c语言扩展库-cJSON.h-json处理库/src/: main.c
001-c-tutorial/32-c语言扩展库/03_libuv.h-网络通信库/: CMakeLists.txt
001_helloworld/: CMakeLists.txt
003_原码补码反码/: CMakeLists.txt
021_结构体入门→024→056/src/: main.c
025_关键字-extern-共享变量或函数声明/: CMakeLists.txt
027_关键字-static-生命周期和作用域/src/: mylib.c
048_c语言计算器多文件结构static版/: CMakeLists.txt
056_结构体深入021←/src/: main_05.c
058_学生管理系统单文件结构/src/: main.c
059_学生管理系统多文件结构/inc/: student_manager.h
059_学生管理系统多文件结构_固定数组版/: .cproject  .project
059_学生管理系统多文件结构_固定数组版/src/: student_manager.c
060_动态内存管理/: .cproject  .project
060_动态内存管理/src/: main.c
061_学生管理系统多文件结构_动态数组版/: .cproject  .project
061_学生管理系统多文件结构_动态数组版/inc/: student_manager.h
061_学生管理系统多文件结构_动态数组版/src/: student_manager.c
062_结构体+动态内存管理实现链表/: .cproject  .project
080_c语言标准库-ctype.h-字符类型判断库函数/: .project
081_c语言标准库-time.h-日期和时间库函数/: .project
082_c语言标准库-limits.h-数据类型极限值库函数/: .project
083_c语言标准库-stdarg.h-可变参数库函数/: .project
084_c语言标准库-string.h-字符串库函数/: .project
085_c语言标准库-stdint.h-可移植的数据类型库函数/: .project
086_c语言标准库-stdlib.h-程序支持库函数/: .project
087_c语言标准库-stdio.h-标准输入输出库函数/: .project
088_c语言标准库-windows.h-windows库函数/: .cproject  .project
(+18 files in other folders)
